# lattice

./: .gitignore  NOTICE  README.md  pyproject.toml
docs/research/: audio-engine-headless.md  ballroom-dna.md  brent-faiyaz-dna.md  conductor-williams-dna.md
docs/specs/: 2026-07-15-beatmaker-design.md  2026-07-16-two-part-form-tunisia-design.md  2026-07-17-ballroom-card-design.md  2026-07-17-chase-card-design.md
scripts/: fetch_assets.py
src/lattice/: __init__.py  api.py  arrange.py  beat.py  cards.py  explain.py  midi.py  model.py  rerender.py  section.py
src/lattice/groove/: bass.py  drums.py  keys.py  lines.py  pocket.py  strings.py
src/lattice/harmony/: elaborate.py  (+4 more)
tests/: test_api.py  test_arrange.py  test_cards.py  test_explain.py  test_midi.py  test_model.py  test_rerender.py  test_scaffold.py  test_tunisia.py  test_two_part.py
tests/calibration/: corpus.py  test_coverage.py  test_groove_bands.py  test_ranking.py
tests/fixtures/: faiyaz_seed7.mid  white_gloves_beat.json
tests/groove/: test_bass.py  test_drums.py  test_keys.py  test_lines.py  test_pocket.py  test_strings.py
tests/harmony/: test_elaborate.py  test_functions.py  test_grammar.py  test_score.py  test_substitutions.py
tests/properties/: test_invariants.py
tests/render/: test_buses.py  test_determinism.py  test_engine.py  test_kits.py  test_master.py  test_mix.py  test_spectral.py  test_spike.py  test_stems.py  test_synth_perc.py  test_synthdefs.py  test_timing.py
tests/theory/: test_chord.py  test_interval.py  test_key.py  test_pitch.py
tests/voicing/: test_voicing.py
(+18 files in other folders)
