[project]
name = "lattice"
version = "0.6.0"
description = "Beat-production engine: theory-constrained generation, style cards, offline render"
authors = [{ name = "Iverson Alcantara", email = "contact@iversonalcantara.com" }]
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "mido>=1.3",
    "numpy>=1.26",
    "supriya>=26.3b0",
]

[dependency-groups]
dev = ["pytest>=8", "hypothesis>=6", "mypy>=1.10", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lattice"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["lattice"]
plugins = ["supriya.ext.mypy"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
extend-select = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: calibration sweeps"]

[[tool.mypy.overrides]]
module = "mido.*"
ignore_missing_imports = true
